fixed weird gap

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body, html{
 
 .otherArea{
     width: 30%;
-    height:100vh;
+    height:110vh;
     padding:10%;
 }
 
@@ -176,8 +176,9 @@ body, html{
 }
 /* ----- FIKS DENNE JÆVELEN!!! ----- */
 .mainContent{
-    height: 300vh;
-    background-color: blue ;
+    height: 280vh;
+    background-color: black;
+    
 }
 
 .discordArea{
@@ -246,7 +247,7 @@ body, html{
     width: 75%;
     border-radius: 15px;
     margin-left: 5vw;
-    margin-top: -2.8vh;
+    margin-top: -2vh;
     transition-duration: 0.3s;
 }
 
@@ -257,6 +258,7 @@ body, html{
 
 #wave {
     margin-bottom: -26px;
+    
 }
 
 /* Footer start */
